fix: Find: Ensure the fast find text remains visible when the text is not found http://bugs.activestate.com/show_bug.cgi?id=99514 rn=
(integrated from komodo (trunk) change 80761 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13197 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -39,7 +39,7 @@
 @button-border-active:                  disabled;
 @button-text-shadow-active:             disabled;
 
-@textbox-appearance:                    textfield;
+@textbox-appearance:                    textbox;
 @menulist-appearance:                   menulist;
 @textbox-background:                    disabled;
 @textbox-color:                         disabled;
